--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Primeiro Milhão</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/Porramones/MPM/style.css">
-    <link rel="shortcut icon" type="imagex/png" href="/Users/ramonlopes/Desktop/Meu Primeiro Milhão/img/MPM LOGO.ico">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="imagex/png" href="MPM LOGO.ico">
 </head>
 <body>
     <header>
@@ -186,7 +186,7 @@
             </div>
         </div>
     
-    <script src="/Porramones/MPM/script.js"></script>
+    <script src="script.js"></script>
 <footer>Todos os direitos reservados | Desenvolvido por Amazon Tech House ®</footer>
 </body>
 </html>
