--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Meu Primeiro Milhão</h1>  <link rel="shortcut ico" type="image/png" href="/Users/ramonlopes/Desktop/Meu Primeiro Milhão/img/Logo Aba.png">
+        <h1>Meu Primeiro Milhão</h1>  <link rel="shortcut ico" type="image/png" href="Logo Aba.png">
         <img src="/Users/ramonlopes/Desktop/Meu Primeiro Milhão/img/MPM LOGO.png" alt="Meu Primeiro Milhão" class="logo"> 
         <a href="https://cloud.mail.portfel.com.br/contato?bu=Consultor&dt=Redes%20sociais&pp=Consultor&ctg=Direto&oid=005bL000003RDiaQAG&ci=005bL000003RDiaQAG" class="caixa">Fale com um Especialista</a>   <!-- Caixa de texto [div] -->
     </header>
@@ -42,7 +42,7 @@
             <div class="container my-4">
                 <div class="row">
                   <div class="col-md-3 text-center">
-                    <img src="/Users/ramonlopes/Desktop/Meu Primeiro Milhão/img/OIBS.jpg" alt="O Investidor de Bom Senso" class="img-fluid mb-2">
+                    <img src="OIBS.jpg" alt="O Investidor de Bom Senso" class="img-fluid mb-2">
                     <h5 class="mb-0">O INVESTIDOR</h5>
                     <h6>DE BOM SENSO</h6>
                   </div>
@@ -57,7 +57,7 @@
               <div class="container my-4">
                 <div class="row">
                   <div class="col-md-3 text-center">
-                    <img src="/Users/ramonlopes/Desktop/Meu Primeiro Milhão/img/ENDP.jpg" alt="Em Nome do Povo" class="img-fluid mb-2">
+                    <img src="ENDP.jpg" alt="Em Nome do Povo" class="img-fluid mb-2">
                     <h5 class="mb-0">EM NOME</h5>
                     <h6>DO POVO</h6>
                   </div>
@@ -72,7 +72,7 @@
               <div class="container my-4">
                 <div class="row">
                   <div class="col-md-3 text-center">
-                    <img src="/Users/ramonlopes/Desktop/Meu Primeiro Milhão/img/OSDMM.jpg" alt="Os Segredos da Mente Milionária" class="img-fluid mb-2">
+                    <img src="OSDMM.jpg" alt="Os Segredos da Mente Milionária" class="img-fluid mb-2">
                     <h5 class="mb-0">Os Segredos</h5>
                     <h6>Da Mente Milionária</h6>
                   </div>
@@ -87,7 +87,7 @@
               <div class="container my-4">
                 <div class="row">
                   <div class="col-md-3 text-center">
-                    <img src="/Users/ramonlopes/Desktop/Meu Primeiro Milhão/img/OHMRDB.jpg" alt="O homem mais rica da Babilonia" class="img-fluid mb-2">
+                    <img src="OHMRDB.jpg" alt="O homem mais rica da Babilonia" class="img-fluid mb-2">
                     <h5 class="mb-0">O Homem</h5>
                     <h6>Mais Rico da Babilonia</h6>
                   </div>
@@ -102,7 +102,7 @@
               <div class="container my-4">
                 <div class="row">
                   <div class="col-md-3 text-center">
-                    <img src="/Users/ramonlopes/Desktop/Meu Primeiro Milhão/img/APF.jpg" alt="A Psicologia Financeira" class="img-fluid mb-2">
+                    <img src="APF.jpg" alt="A Psicologia Financeira" class="img-fluid mb-2">
                     <h5 class="mb-0">A Psicologia</h5>
                     <h6>Financeira</h6>
                   </div>
@@ -117,7 +117,7 @@
               <div class="container my-4">
                 <div class="row">
                   <div class="col-md-3 text-center">
-                    <img src="/Users/ramonlopes/Desktop/Meu Primeiro Milhão/img/PRPP.jpg" alt="Pai Rico Pai Pobre" class="img-fluid mb-2">
+                    <img src="PRPP.jpg" alt="Pai Rico Pai Pobre" class="img-fluid mb-2">
                     <h5 class="mb-0">Pai Rico</h5>
                     <h6>Pai Pobre</h6>
                   </div>
