--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Meu Primeiro Milhão</h1>  <link rel="shortcut ico" type="image/png" href="Logo Aba.png">
-        <img src="/Users/ramonlopes/Desktop/Meu Primeiro Milhão/img/MPM LOGO.png" alt="Meu Primeiro Milhão" class="logo"> 
+        <img src="MPM LOGO.png" alt="Meu Primeiro Milhão" class="logo"> 
         <a href="https://cloud.mail.portfel.com.br/contato?bu=Consultor&dt=Redes%20sociais&pp=Consultor&ctg=Direto&oid=005bL000003RDiaQAG&ci=005bL000003RDiaQAG" class="caixa">Fale com um Especialista</a>   <!-- Caixa de texto [div] -->
     </header>
     <div class="container-fluid d-flex justify-content-center flex-wrap gap-2 mt-3">
