--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Meu Primeiro Milhão</h1>  <link rel="shortcut ico" type="image/png" href="Logo Aba.png">
+        <h1>Meu Primeiro Milhão</h1>  <link rel="shortcut ico" type="image/png" href="MPM LOGO.png">
         <img src="MPM LOGO.png" alt="Meu Primeiro Milhão" class="logo"> 
         <a href="https://cloud.mail.portfel.com.br/contato?bu=Consultor&dt=Redes%20sociais&pp=Consultor&ctg=Direto&oid=005bL000003RDiaQAG&ci=005bL000003RDiaQAG" class="caixa">Fale com um Especialista</a>   <!-- Caixa de texto [div] -->
     </header>
